second commit: a huge part of frontend work

--- a/client/src/app/modules/cards/components/card/card.component.css
+++ b/client/src/app/modules/cards/components/card/card.component.css
@@ -23,7 +23,7 @@
 }
 
 .button-toggle {
-    background-color: var(--white);
+    background-color: rbga(255, 255, 255, 0);
     border: none;
     width: 15px;
     height: 15px;
