--- a/client/src/app/modules/cards/components/card/card.component.html
+++ b/client/src/app/modules/cards/components/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <header class="header">
-        <h5 class="name">{{name}}</h5>
+        <h5 class="name" (click)="openCardModal()">{{name}}</h5>
         <div class="dropdown" dropdown>
             <button dropdownToggle class="button-toggle">
                 <i class="fa fa-ellipsis-v"></i>
