--- a/client/src/app/modules/lists/components/lists/lists.component.html
+++ b/client/src/app/modules/lists/components/lists/lists.component.html
@@ -2,5 +2,5 @@
     <app-list [list]="'Planned'" [count]="5"></app-list>
     <app-list [list]="'In progress'" [count]="23"></app-list>
     <app-list [list]="'Closed'" [count]="12"></app-list>
-    <app-list [list]="'Essential'" [count]="6"></app-list>
+    <app-list [list]="'Add new list'" [count]="0"></app-list>
 </div>
