--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -6,6 +6,7 @@
 }
 
 .container {
+    position: relative;
     margin: 0 auto;
     padding: 10px 25px;
 }
@@ -20,6 +21,7 @@
 .title {
     font-size: 21px;
     font-weight: 600;
+    margin: 0;
 }
 
 .button {
