--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div class="container">
     <header class="header">
         <h2 class="title">My Task Board</h2>
-        <button class="button">
+        <button class="button" (click)="toggleHistory()">
             History
         </button>
     </header>
+    <app-history *ngIf="isHistoryVisible" (hideHistory)="toggleHistory()"></app-history>
     <app-lists></app-lists>
 </div>
