loading interceptors, a lit bit of responsive design, and other

--- a/client/src/app/modules/history/components/history/history.component.html
+++ b/client/src/app/modules/history/components/history/history.component.html
@@ -10,11 +10,8 @@
         </div>
     </div>
     <div class="history-body">
-        <div class="container">
+        <div class="container content-container">
             <div class="history-content">
-                <li>You added WORK to ESSENTIAL list</li>
-                <li>You added WORK to ESSENTIAL list</li>
-                <li>You added WORK to ESSENTIAL list</li>
                 <li>You added WORK to ESSENTIAL list</li>
                 <li>You added WORK to ESSENTIAL list</li>
                 <li>You added WORK to ESSENTIAL list</li>
