--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,7 @@
+<ngx-spinner type="timer">
+    <h4>Loading...</h4>
+</ngx-spinner>
+
 <div class="container">
     <header class="header">
         <h2 class="title">My Task Board</h2>
