--- a/client/src/app/modules/cards/components/card/card.component.css
+++ b/client/src/app/modules/cards/components/card/card.component.css
@@ -53,7 +53,7 @@
 .select {
     display: block;
     width: 100%;
-    padding: 8px 19px;
+    padding: 5px 13px;
     margin-top: 3px;
     border-radius: 5px;
     background-color: var(--grey);
@@ -67,4 +67,8 @@
 
 .delete {
     color: var(--red);
+}
+
+.move {
+    width: 100%;
 }
