--- a/client/src/app/modules/cards/components/card/card.component.html
+++ b/client/src/app/modules/cards/components/card/card.component.html
@@ -23,8 +23,10 @@
         {{dueDate | date}}
     </p>
     <span class="priority">• {{priority}}</span>
-    <select [(ngModel)]="selectedOption" class="select">
-        <option [disabled]="true" value="Move to" [defaultSelected]="'Move to'">Move to</option>
-        <option *ngFor="let option of options" [value]="option">{{option}}</option>
-    </select>
+    <div class="dropdown" dropdown>
+        <button class="select" dropdownToggle>Move To</button>
+        <div class="dropdown-menu move" *dropdownMenu>
+            <p class="dropdown-item" *ngFor="let option of options" (click)="moveTo(option)">{{option}}</p>
+        </div>
+    </div>
 </div>
