--- a/client/src/app/modules/lists/components/lists/lists.component.css
+++ b/client/src/app/modules/lists/components/lists/lists.component.css
@@ -3,3 +3,21 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 25px;
 }
+
+@media (max-width: 1000px) {
+    .container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 800px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 600px) {
+    .container {
+        grid-template-columns: 1fr;
+    }
+}
