--- a/client/src/app/modules/lists/components/lists/lists.component.html
+++ b/client/src/app/modules/lists/components/lists/lists.component.html
@@ -1,6 +1,26 @@
 <div class="container">
-    <app-list [list]="'Planned'" [count]="5"></app-list>
-    <app-list [list]="'In progress'" [count]="23"></app-list>
-    <app-list [list]="'Closed'" [count]="12"></app-list>
-    <app-list [list]="'Add new list'" [count]="0"></app-list>
+    <app-list 
+        [list]="'Planned'" 
+        [count]="5" 
+        [lists]="['Planned', 'Is progress', 'Closed']"
+        [priorities]="['Low', 'Medium', 'High']"
+    ></app-list>
+    <app-list 
+        [list]="'In progress'" 
+        [count]="23" 
+        [lists]="['Planned', 'Is progress', 'Closed']"
+        [priorities]="['Low', 'Medium', 'High']"
+    ></app-list>
+    <app-list 
+        [list]="'Closed'" 
+        [count]="12" 
+        [lists]="['Planned', 'Is progress', 'Closed']"
+        [priorities]="['Low', 'Medium', 'High']"
+    ></app-list>
+    <app-list 
+        [list]="'Add new list'" 
+        [count]="0" 
+        [lists]="['Planned', 'Is progress', 'Closed']"
+        [priorities]="['Low', 'Medium', 'High']"
+    ></app-list>
 </div>
