--- a/client/src/app/shared/components/custom-select/custom-select.component.html
+++ b/client/src/app/shared/components/custom-select/custom-select.component.html
@@ -1,10 +1,10 @@
 <div class="btn-group" dropdown>
-    <button dropdownToggle class="select dropdown-toggle">
+    <button dropdownToggle class="select dropdown-toggle" [formControl]="control">
         {{label}} <span class="caret"></span>
     </button>
     <ul *dropdownMenu class="dropdown-menu">
         <li role="menuitem" *ngFor="let option of options">
-            <p class="dropdown-item" (click)="choose(option)">{{option}}</p>
+            <p class="dropdown-item" (click)="handleClick(option)">{{option}}</p>
         </li>
     </ul>
 </div>
