--- a/client/src/app/modules/lists/components/lists/lists.component.html
+++ b/client/src/app/modules/lists/components/lists/lists.component.html
@@ -5,7 +5,7 @@
         [id]="list.id"
         [count]="list.cards.length"
         [cards]="list.cards"
-        [lists]="['Planned', 'Is progress', 'Closed']"
+        [lists]="listsNames"
         [priorities]="['Low', 'Medium', 'High']"
     ></app-list>
     <div>
