--- a/client/src/app/modules/cards/components/card/card.component.html
+++ b/client/src/app/modules/cards/components/card/card.component.html
@@ -10,7 +10,7 @@
                     <i class="fa fa-edit"></i>
                     Edit
                 </p>
-                <p class="dropdown-item delete" >
+                <p class="dropdown-item delete" (click)="deleteCard(id!)">
                     <i class="fa fa-trash"></i>
                     Delete
                 </p>
