--- a/client/src/app/modules/lists/components/edit-list/edit-list.component.html
+++ b/client/src/app/modules/lists/components/edit-list/edit-list.component.html
@@ -6,7 +6,13 @@
         [(ngModel)]="name"
     >
     <div class="buttons">
-        <button class="button add" (click)="editList()">Save</button>
+        <button 
+            class="button add" 
+            [class.button-disabled]="initialName === name"
+            (click)="editList()" 
+            [disabled]="initialName === name"
+            disabled="{{initialName === name}}"
+        >Save</button>
         <button class="button cancel" (click)="changeMode()">Cancel</button>
     </div>
 </div>
