--- a/client/src/app/modules/modals/components/open-card/open-card.component.html
+++ b/client/src/app/modules/modals/components/open-card/open-card.component.html
@@ -15,15 +15,24 @@
                 </div>
                 <div class="card-info">
                     <section class="info">
-                        <p class="info__name">List</p>
+                        <p class="info__name">
+                            <i class="fa fa-list"></i>
+                            List
+                        </p>
                         <p class="info__value">{{list}}</p>
                     </section>
                     <section class="info">
-                        <p class="info__name">Due Date</p>
+                        <p class="info__name">
+                            <i class="fa fa-calendar-o"></i>
+                            Due Date
+                        </p>
                         <p class="info__value">{{dueDate | date}}</p>
                     </section>
                     <section class="info">
-                        <p class="info__name">Priority</p>
+                        <p class="info__name">
+                            <i class="fa fa-tag"></i>
+                            Priority
+                        </p>
                         <p class="info__value">{{priority}}</p>
                     </section>
                 </div>
