--- a/client/src/app/styles/variables.css
+++ b/client/src/app/styles/variables.css
@@ -4,6 +4,7 @@
     --grey: #e1e3e9;
     --red: #c21f1f;
     --blue: #5e647f;
+    --blue-disabled: #8a8fa8;
 
     --font-grey: #969bac;
     --border-grey: #d9dce1;
