--- a/client/src/app/modules/lists/components/add-list/add-list.component.css
+++ b/client/src/app/modules/lists/components/add-list/add-list.component.css
@@ -35,3 +35,8 @@ input::placeholder {
     color: var(--black);
     border: 1px solid var(--border-grey);
 }
+
+.button-disabled {
+    background-color: var(--blue-disabled);
+    border: 1px solid var(--blue-disabled);
+}
