--- a/client/src/app/modules/modals/components/edit-card/edit-card.component.css
+++ b/client/src/app/modules/modals/components/edit-card/edit-card.component.css
@@ -40,6 +40,11 @@
     border: 1px solid var(--border-grey);
 }
 
+.button-disabled {
+    background-color: var(--blue-disabled);
+    border: 1px solid var(--blue-disabled);
+}
+
 .close {
     color: var(--white);
 }
