--- a/client/src/app/modules/modals/components/edit-card/edit-card.component.html
+++ b/client/src/app/modules/modals/components/edit-card/edit-card.component.html
@@ -46,7 +46,12 @@
 </div>
 <div class="container">
     <div class="footer">
-        <button class="button save" (click)="saveChanges()">Save</button>
+        <button 
+            class="button save" 
+            [class.button-disabled]="!editCardForm.dirty"
+            (click)="saveChanges()" 
+            [disabled]="!editCardForm.dirty"
+        >Save</button>
         <button class="button cancel" (click)="bsModalRef.hide()">Cancel</button>
     </div>
 </div>
