--- a/client/src/app/modules/modals/components/open-card/open-card.component.css
+++ b/client/src/app/modules/modals/components/open-card/open-card.component.css
@@ -48,9 +48,10 @@
 }
 
 .name {
-    font-size: 1.1rem;
+    font-size: 1.15rem;
     font-weight: 500;
     color: var(--black);
+    margin-bottom: 15px;
 }
 
 .description {
@@ -82,6 +83,7 @@
 .info__name {
     color: var(--font-grey);
     font-weight: 500;
+    font-size: 0.9rem;
 }
 
 .info__value {
