--- a/client/src/app/styles/variables.css
+++ b/client/src/app/styles/variables.css
@@ -6,7 +6,7 @@
     --blue: #5e647f;
     --blue-disabled: #8a8fa8;
 
-    --font-grey: #969bac;
+    --font-grey: #878ca0;
     --border-grey: #d9dce1;
     --priority-grey: #f3f4f6;
 }
