--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,9 +2,7 @@
 <div class="container">
     <header class="header">
         <h2 class="title">My Task Board</h2>
-        <button class="button" (click)="toggleHistory()">
-            History
-        </button>
+        <button class="button" (click)="toggleHistory()">History</button>
     </header>
     <app-history *ngIf="isHistoryVisible" (hideHistory)="toggleHistory()"></app-history>
     <app-lists></app-lists>
