--- a/client/src/app/modules/cards/components/card/card.component.css
+++ b/client/src/app/modules/cards/components/card/card.component.css
@@ -2,10 +2,10 @@
     display: flex;
     flex-direction: column;
     row-gap: 7.5px;
-    border-radius: 15px;
     padding: 17px 15px;
-    border: 1.5px solid var(--border-grey);
     margin: 15px 0;
+    border: 1.5px solid var(--border-grey);
+    border-radius: 15px;
 }
 
 .header {
@@ -42,23 +42,24 @@
 }
 
 .priority {
-    border-radius: 30px;
+    width: fit-content;
     padding: 5px 10px;
+    border-radius: 30px;
     background-color: var(--priority-grey);
     color: var(--font-grey);
     font-size: 0.85rem;
     font-weight: 500;
-    flex-shrink: 0;
 }
 
 .select {
     display: block;
     width: 100%;
-    padding: 5px 13px;
+    padding: 4px 11px;
     margin-top: 3px;
     border-radius: 5px;
     background-color: var(--grey);
     color: var(--black);
+    font-size: 0.95rem;
     cursor: pointer;
 }
 
