--- a/client/src/app/modules/lists/components/list/list.component.html
+++ b/client/src/app/modules/lists/components/list/list.component.html
@@ -1,13 +1,13 @@
 <div class="container" *ngIf="!editListMode">
     <header class="header">
-        <h5 class="list-name">{{listName | titlecase}}</h5>
+        <h5 class="list-name">{{listName}}</h5>
         <div class="header__button">
             <p class="count">{{count}}</p>
             <div class="dropdown" dropdown>
                 <button dropdownToggle class="button-toggle">
                     <i class="fa fa-ellipsis-v"></i>
                 </button>
-                <div class="dropdown-menu" *dropdownMenu>
+                <div class="dropdown-menu" *dropdownMenu [class.dropdown-menu-right]="isDivisibleByFour(ordinalNumber!)">
                     <p class="dropdown-item" (click)="changeEditMode()">
                         <i class="fa fa-edit"></i>
                         Edit
@@ -23,7 +23,7 @@
     <button class="button" (click)="openCreateCardModal()">+ Add new card</button>
     <div *ngIf="!editListMode">
         <app-card
-            *ngFor="let card of cards"
+            *ngFor="let card of cards; let i = index"
             [id]="card.id"
             [name]="card.name" 
             [description]="card.description"
@@ -32,6 +32,7 @@
             [list]="listName"
             [listId]="listId"
             [lists]="lists"
+            [rightContextMenu]="isDivisibleByFour(ordinalNumber!)"
         ></app-card>
     </div>
 </div>
