--- a/client/src/app/modules/shared/components/date-picker/date-picker.component.css
+++ b/client/src/app/modules/shared/components/date-picker/date-picker.component.css
@@ -1,5 +1,5 @@
 .select {
-    display: block;
+    display: inline-block;
     width: 30%;
     padding: 8px 19px;
     margin-top: 3px;
@@ -11,4 +11,25 @@
 
 input::placeholder {
     color: var(--black);
+}
+
+.date-picker-container {
+    position: relative;
+}
+
+.select-arrow {
+    position: absolute;
+    left: 24%;
+    top: 26%;
+}
+
+.select-arrow::after {
+    display: inline-block;
+    margin-left: .255em;
+    vertical-align: .255em;
+    content: "";
+    border-top: .3em solid;
+    border-right: .3em solid transparent;
+    border-bottom: 0;
+    border-left: .3em solid transparent;
 }
