--- a/client/src/app/modules/boards/components/boards/boards.component.html
+++ b/client/src/app/modules/boards/components/boards/boards.component.html
@@ -1,6 +1,6 @@
-<div class="boards-container" *ngIf="(boardsService.boardNames$ | async) as boards">
+<div class="boards-container" *ngIf="(boards$ | async) as boards">
     <app-board-item
-        *ngFor="let board of boards"
+        *ngFor="let board of boards.boards"
         [name]="board.name"
         [id]="board.id"
     ></app-board-item>
